feat: added likes

--- a/templates/anime/all.html.twig
+++ b/templates/anime/all.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Liste des Animes{% endblock %}
 
 {% block body %}
+
     <div class="container mt-4">
         <h1 class="text-center mb-4">Liste des Animes</h1>
 
@@ -13,7 +14,31 @@
                         <img src="{{ anime.picture }}" class="card-img-top" alt="{{ anime.title }}">
                         <div class="card-body">
                             <h5 class="card-title">{{ anime.title }}</h5>
-                            <a href="anime/{{ anime.id }}" class="btn btn-primary">Voir plus</a>
+                            <a href="{{ path('one_anime', {id: anime.id}) }}" class="btn btn-primary">Voir plus</a>
+                            {% if isAuthenticated == true %}
+                                {% if anime.isLiked == false %}
+                                    <form action="{{ path('anime_like', {id: anime.id}) }}" method="post" class="like-form">
+                                        <button type="submit" class="btn btn-success">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                                 class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                            </svg>
+                                            J'aime
+                                        </button>
+                                    </form>
+                                {% else %}
+                                    <form action="{{ path('anime_dislike', {id: anime.id}) }}" method="post" class="like-form">
+                                        <button type="submit" class="btn btn-danger">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                                 class="bi bi-heartbreak-fill" viewBox="0 0 16 16">
+                                                <path d="M8.931.586 7 3l1.5 4-2 3L8 15C22.534 5.396 13.757-2.21 8.931.586M7.358.77 5.5 3 7 7l-1.5 3 1.815 4.537C-6.533 4.96 2.685-2.467 7.358.77"/>
+                                            </svg>
+                                            J'aime pas
+                                        </button>
+                                    </form>
+                                {% endif %}
+                            {% endif %}
                         </div>
                     </div>
                 </div>
