--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -42,6 +42,10 @@
                 <div class="mt-3 text-center">
                     <a href="{{ path('app_register') }}">Pas encore de compte? Inscrivez-vous ici.</a>
                 </div>
+
+                <div class="mt-3 text-center">
+                    <a href="{{ path('all_anime') }}">Continuer sans connexion.</a>
+                </div>
             </div>
         </div>
     </div>
