feat: added liked anime page

--- a/templates/anime/like.html.twig
+++ b/templates/anime/like.html.twig
@@ -19,7 +19,7 @@
             </div>
         </nav>
 
-        <h1 class="text-center mb-4">Liste des Animes</h1>
+        <h1 class="text-center mb-4">Liste des Animes likés</h1>
 
         <div class="row">
             {% for anime in animes %}
